--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -14,8 +14,14 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            shrinkResources true
+        }
+    }
+    sourceSets {
+        main {
+            java.srcDirs = ['src/main/java', '../common/src/main/java']
         }
     }
 }
@@ -23,5 +29,4 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.support:wearable:1.2.0'
-    compile 'com.google.android.gms:play-services-wearable:7.5.0'
 }
