--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -28,4 +28,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.google.android.support:wearable:+'
+    provided 'com.google.android.wearable:wearable:+'
 }
