--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "net.waynepiekarski.wearsensors"
@@ -28,6 +28,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.android.support:wearable:+'
-    provided 'com.google.android.wearable:wearable:+'
+    compile 'com.google.android.support:wearable:1.4.0'
+    provided 'com.google.android.wearable:wearable:1.0.0'
 }
